--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <HEAD><title>Todo App</title>
-<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="style.css" type="text/css">
+<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet'>
+<link rel="stylesheet" href="style.css">
 </HEAD>
 <body>
 <div class="aaa"><img src="./eisenhower-matrix.jpg"><a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a></div>
@@ -17,6 +17,6 @@
 </li>
 </ul>
 </div>
-<script type="text/javascript" SRC="app.js"></script>
+<script SRC="app.js"></script>
 </body>
 </html>
