--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="aaa">
+  <header class="aaa">
     <img src="./eisenhower-matrix.jpg" alt="the table, that helps to plan your daily tasks"><a class="more_inf" 
     href="https://goal-life.com/page/method/matrix-eisenhower">
     Want more details?;</a>
-  </div>
-  <div class="centered-main-page-element">
+  </header>
+  <main class="centered-main-page-element">
     <p id="topSectionForAddingElementToList">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
@@ -48,7 +48,7 @@
         <button class="delete"><img src="./remove.svg" alt="delete the point"></button>
       </li>
     </ul>
-  </div>
+  </main>
 <script src="app.js"></script>
 </body>
 </html>
