--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="page">
   <header class="aaa">
     <img src="./eisenhower-matrix.jpg" alt="the table, that helps to plan your daily tasks"><a class="more_inf" 
     href="https://goal-life.com/page/method/matrix-eisenhower">
@@ -15,37 +15,37 @@
   </header>
   <main class="centered-main-page-element">
     <p id="topSectionForAddingElementToList">
-      <label for="new-task">Add Item</label>
+      <label class="label" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
-        <input id="new-task"class="task" type="text">
-        <button>Add</button>
+        <input id="new-task"class="task input" type="text">
+        <button class="button">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg" alt="delete the point"></button>
+    <h3 class="h3">Todo</h3>
+    <ul class="ul" id="incompleteTasks">
+      <li class="li">
+        <input type="checkbox" class="input-checkbox">
+        <label class="task label">Pay Bills</label>
+        <input type="text" class="task input">
+        <button class="edit button">Edit</button>
+        <button class="delete button"><img src="./remove.svg" alt="delete the point"></button>
       </li>
-      <li class="editMode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg" alt="delete the point"></button>
+      <li class="editMode li">
+        <input type="checkbox" class="input-checkbox">
+        <label class="task label">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task input">
+        <button class="edit button">Save</button>
+        <button class="delete button"><img src="./remove.svg" alt="delete the point"></button>
       </li>
     </ul>
     <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg" alt="delete the point"></button>
+    <ul  class="ul" id="completed-tasks">
+      <li class="li">
+        <input type="checkbox" class="input-checkbox" checked>
+        <label class="task label">See the Doctor</label>
+        <input type="text" class="task input">
+        <button class="edit button">Edit</button>
+        <button class="delete button"><img src="./remove.svg" alt="delete the point"></button>
       </li>
     </ul>
   </main>
