--- a/index.html
+++ b/index.html
@@ -8,40 +8,40 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="page">
-  <header class="aaa">
-    <img src="./eisenhower-matrix.jpg" alt="the table, that helps to plan your daily tasks"><a class="more_inf" 
+  <header class="todo-guide">
+    <img src="./eisenhower-matrix.jpg" alt="the table, that helps to plan your daily tasks"><a class="more-info" 
     href="https://goal-life.com/page/method/matrix-eisenhower">
     Want more details?;</a>
   </header>
-  <main class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
+  <main class="todo-tasks">
+    <p id="add-todo">
       <label class="label" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task"class="task input" type="text">
         <button class="button">Add</button>
       </div>
     </p>
-    <h3 class="h3">Todo</h3>
-    <ul class="ul" id="incompleteTasks">
-      <li class="li">
-        <input type="checkbox" class="input-checkbox">
+    <h3 class="title">Todo</h3>
+    <ul class="task-list" id="incomplete-tasks">
+      <li class="task-item">
+        <input type="checkbox" class="task-checkbox">
         <label class="task label">Pay Bills</label>
         <input type="text" class="task input">
         <button class="edit button">Edit</button>
         <button class="delete button"><img src="./remove.svg" alt="delete the point"></button>
       </li>
-      <li class="editMode li">
-        <input type="checkbox" class="input-checkbox">
+      <li class="editMode task-item">
+        <input type="checkbox" class="task-checkbox">
         <label class="task label">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task input">
         <button class="edit button">Save</button>
         <button class="delete button"><img src="./remove.svg" alt="delete the point"></button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul  class="ul" id="completed-tasks">
-      <li class="li">
-        <input type="checkbox" class="input-checkbox" checked>
+    <h3 class="title">Completed</h3>
+    <ul  class="task-list" id="completed-tasks">
+      <li class="task-item">
+        <input type="checkbox" class="task-checkbox" checked>
         <label class="task label">See the Doctor</label>
         <input type="text" class="task input">
         <button class="edit button">Edit</button>
