--- a/index.html
+++ b/index.html
@@ -9,43 +9,43 @@
 </head>
 <body class="page">
   <header class="todo-guide">
-    <img src="./eisenhower-matrix.jpg" alt="the table, that helps to plan your daily tasks"><a class="more-info" 
+    <img src="./eisenhower-matrix.jpg" alt="the table, that helps to plan your daily tasks"><a class="task-matrix" 
     href="https://goal-life.com/page/method/matrix-eisenhower">
     Want more details?;</a>
   </header>
   <main class="todo-tasks">
     <p id="add-todo">
-      <label class="label" for="new-task">Add Item</label>
+      <label class="task-name" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
-        <input id="new-task"class="task input" type="text">
-        <button class="button">Add</button>
+        <input id="new-task"class="task input-task" type="text">
+        <button class="btn-task">Add</button>
       </div>
     </p>
-    <h3 class="title">Todo</h3>
+    <h3 class="list-title">Todo</h3>
     <ul class="task-list" id="incomplete-tasks">
       <li class="task-item">
         <input type="checkbox" class="task-checkbox">
-        <label class="task label">Pay Bills</label>
-        <input type="text" class="task input">
-        <button class="edit button">Edit</button>
-        <button class="delete button"><img src="./remove.svg" alt="delete the point"></button>
+        <label class="task task-name">Pay Bills</label>
+        <input type="text" class="task input-task">
+        <button class="edit btn-task">Edit</button>
+        <button class="delete btn-task"><img src="./remove.svg" alt="delete the point"></button>
       </li>
       <li class="editMode task-item">
         <input type="checkbox" class="task-checkbox">
-        <label class="task label">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task input">
-        <button class="edit button">Save</button>
-        <button class="delete button"><img src="./remove.svg" alt="delete the point"></button>
+        <label class="task task-name">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task input-task">
+        <button class="edit btn-task">Save</button>
+        <button class="delete btn-task"><img src="./remove.svg" alt="delete the point"></button>
       </li>
     </ul>
-    <h3 class="title">Completed</h3>
+    <h3 class="list-title">Completed</h3>
     <ul  class="task-list" id="completed-tasks">
       <li class="task-item">
         <input type="checkbox" class="task-checkbox" checked>
-        <label class="task label">See the Doctor</label>
-        <input type="text" class="task input">
-        <button class="edit button">Edit</button>
-        <button class="delete button"><img src="./remove.svg" alt="delete the point"></button>
+        <label class="task task-name">See the Doctor</label>
+        <input type="text" class="task input-task">
+        <button class="edit btn-task">Edit</button>
+        <button class="delete btn-task"><img src="./remove.svg" alt="delete the point"></button>
       </li>
     </ul>
   </main>
