--- a/index.html
+++ b/index.html
@@ -9,43 +9,44 @@
 </head>
 <body class="page">
   <header class="todo-guide">
-    <img src="./eisenhower-matrix.jpg" alt="the table, that helps to plan your daily tasks"><a class="task-matrix" 
+    <img src="./eisenhower-matrix.jpg" alt="the table, that helps to plan your daily tasks">
+    <a class="todo-guide__task-matrix" 
     href="https://goal-life.com/page/method/matrix-eisenhower">
     Want more details?;</a>
   </header>
   <main class="todo-tasks">
-    <p id="add-todo">
-      <label class="task-name" for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task"class="task input-task" type="text">
-        <button class="btn-task">Add</button>
+    <p id="todo-tasks__add-todo">
+      <label class="todo-tasks__task-name" for="new-task">Add Item</label>
+      <div class="todo-tasks__task-row-wrapper">
+        <input id="new-task" class="todo-task__input-task_width todo-tasks__input-task" type="text">
+        <button class="todo-tasks__btn-task">Add</button>
       </div>
     </p>
-    <h3 class="list-title">Todo</h3>
-    <ul class="task-list" id="incomplete-tasks">
-      <li class="task-item">
-        <input type="checkbox" class="task-checkbox">
-        <label class="task task-name">Pay Bills</label>
-        <input type="text" class="task input-task">
-        <button class="edit btn-task">Edit</button>
-        <button class="delete btn-task"><img src="./remove.svg" alt="delete the point"></button>
+    <h3 class="todo-tasks__list-title">Todo</h3>
+    <ul class="todo-tasks__task-list todo-tasks__task-list_incomplete-tasks">
+      <li class="todo-tasks__task-item">
+        <input type="checkbox" class="todo-tasks__task-checkbox">
+        <label class="todo-tasks__task-name todo-tasks__task-name_width">Pay Bills</label>
+        <input type="text" class="todo-task__input-task_width todo-tasks__input-task">
+        <button class="todo-tasks__btn-task todo-tasks__btn-task_edit">Edit</button>
+        <button class="todo-tasks__btn-task todo-tasks__btn-task_delete"><img src="./remove.svg" alt="delete the point"></button>
       </li>
-      <li class="editMode task-item">
-        <input type="checkbox" class="task-checkbox">
-        <label class="task task-name">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task input-task">
-        <button class="edit btn-task">Save</button>
-        <button class="delete btn-task"><img src="./remove.svg" alt="delete the point"></button>
+      <li class="todo-tasks__task-item todo-tasks__task-item_edit-mode">
+        <input type="checkbox" class="todo-tasks__task-checkbox">
+        <label class="todo-tasks__task-name todo-tasks__task-name_width">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="todo-task__input-task_width todo-tasks__input-task">
+        <button class="todo-tasks__btn-task todo-tasks__btn-task_edit">Save</button>
+        <button class="todo-tasks__btn-task todo-tasks__btn-task_delete"><img src="./remove.svg" alt="delete the point"></button>
       </li>
     </ul>
-    <h3 class="list-title">Completed</h3>
-    <ul  class="task-list" id="completed-tasks">
-      <li class="task-item">
-        <input type="checkbox" class="task-checkbox" checked>
-        <label class="task task-name">See the Doctor</label>
-        <input type="text" class="task input-task">
-        <button class="edit btn-task">Edit</button>
-        <button class="delete btn-task"><img src="./remove.svg" alt="delete the point"></button>
+    <h3 class="todo-tasks__list-title">Completed</h3>
+    <ul  class="todo-tasks__task-list todo-tasks__task-list_completed-tasks">
+      <li class="todo-tasks__task-item">
+        <input type="checkbox" class="todo-tasks__task-checkbox" checked>
+        <label class="todo-tasks__task-name todo-tasks__task-name_width">See the Doctor</label>
+        <input type="text" class="todo-task__input-task_width todo-tasks__input-task">
+        <button class="todo-tasks__btn-task todo-tasks__btn-task_edit">Edit</button>
+        <button class="todo-tasks__btn-task todo-tasks__btn-task_delete"><img src="./remove.svg" alt="delete the point"></button>
       </li>
     </ul>
   </main>
