--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -15,13 +15,13 @@
     Want more details?;</a>
   </header>
   <main class="todo-tasks">
-    <p id="todo-tasks__add-todo">
+    <div id="todo-tasks__add-todo">
       <label class="todo-tasks__task-name" for="new-task">Add Item</label>
       <div class="todo-tasks__task-row-wrapper">
         <input id="new-task" class="todo-task__input-task_width todo-tasks__input-task" type="text">
         <button class="todo-tasks__btn-task">Add</button>
       </div>
-    </p>
+    </div>
     <h3 class="todo-tasks__list-title">Todo</h3>
     <ul class="todo-tasks__task-list todo-tasks__task-list_incomplete-tasks">
       <li class="todo-tasks__task-item">
